--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Movie Search</title>
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
-    Hi
+  <body class="bg-gray-100 text-gray-800">
+    <header>
+      <img
+        src="./the.jpg"
+        alt="Header Image"
+        class="w-full h-full object-cover mb-4"
+      />
+    </header>
+
+    <div class="container mx-auto p-4">
+      <h1 class="text-3xl font-bold mb-4">Search Movies</h1>
+      <input
+        type="text"
+        id="searchInput"
+        placeholder="Search for a movie..."
+        class="w-full p-2 border border-gray-300 rounded mb-4"
+      />
+      <div id="movieList" class="grid grid-cols-2 md:grid-cols-4 gap-4"></div>
+    </div>
+    <script src="./main.js"></script>
   </body>
 </html>
