--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-gray-100 text-gray-800">
+    <nav class="bg-black p-4 text-white">
+      <ul class="flex justify-end space-x-8">
+        <li><a href="index.html" class="hover:underline">Home Page</a></li>
+        <li>
+          <a href="./journal.html" class="hover:underline">Journal Page</a>
+        </li>
+      </ul>
+    </nav>
     <header>
       <img
         src="./the.jpg"
