--- a/journal.html
+++ b/journal.html
@@ -1,26 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Journal Page</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Journal Page</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
 
-<body class="bg-gray-100 text-gray-800">
+  <body class="bg-gray-100 text-gray-800">
+    <nav class="bg-black p-4 text-white">
+      <ul class="flex justify-end space-x-8">
+        <li><a href="./index.html" class="hover:underline">Home Page</a></li>
+        <li>
+          <a href="journal.html" class="hover:underline">Journal Page</a>
+        </li>
+      </ul>
+    </nav>
+    <header>
+      <img
+        src="./the.jpg"
+        alt="Header Image"
+        class="w-full h-full object-cover mb-4"
+      />
+    </header>
 
-  <header>
-    <img src="./the.jpg" alt="Header Image" class="w-full h-full object-cover mb-4"/>
-  </header>
-
-  <div class="container mx-auto p-4">
-    <h1 class="text-3xl font-bold mb-4">Favorite Movies</h1>
-    <button class="border border-gray-800 text-gray-800 hover:bg-blue-300 hover:text-white font-bold py-2 px-4 rounded mb-6" onclick="renderFavMovies()">Click here     
-    </button>
-    <div id = "favMovies" class="grid grid-cols-2 md:grid-cols-4 gap-4" ></div>
-  </div>
-  <script src="./journal.js"></script>
-  <script src="./main.js"></script>
-  
-</body>
+    <div class="container mx-auto p-4">
+      <h1 class="text-3xl font-bold mb-4">Favorite Movies</h1>
+      <button
+        class="border border-gray-800 text-gray-800 hover:bg-blue-300 hover:text-white font-bold py-2 px-4 rounded mb-6"
+        onclick="renderFavMovies()"
+      >
+        Click here
+      </button>
+      <div id="favMovies" class="grid grid-cols-2 md:grid-cols-4 gap-4"></div>
+    </div>
+    <script src="./journal.js"></script>
+    <script src="./main.js"></script>
+  </body>
 </html>
